[package]
name = "fid"
version = "0.1.0"
authors = ["Sam Rose <hello@samwho.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
syn = { version = "1", features = ["full"] }
anyhow = "1"
toml = "0.5"

[dev-dependencies]
tempfile = "3"